plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.github.cokelee777'
version = '1.0.0-SNAPSHOT'

sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

ext {
    kafkaVersion = '3.8.1'
    awsSdkVersion = '2.41.3'
    jedisVersion = '7.2.0'

    junitVersion = '5.11.0'
    mockitoVersion = '5.21.0'
    testcontainersVersion = '1.21.4'
    slf4jVersion = '2.0.17'
}

dependencies {
    compileOnly "org.apache.kafka:connect-api:${kafkaVersion}"
    compileOnly "org.apache.kafka:connect-transforms:${kafkaVersion}"

    implementation "software.amazon.awssdk:s3:${awsSdkVersion}"
    implementation "redis.clients:jedis:${jedisVersion}"

    compileOnly "org.slf4j:slf4j-api:${slf4jVersion}"

    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"

    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:localstack:${testcontainersVersion}"

    testImplementation "com.redis.testcontainers:testcontainers-redis-junit:1.6.4"
    testImplementation "org.slf4j:slf4j-simple:${slf4jVersion}"
}

test {
    useJUnitPlatform()
    // 테스트 시 불필요한 경고 숨기기 (Java 17+ 이슈 대응)
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

shadowJar {
    // 'all' 분류자를 붙여서 일반 jar와 구분 (예: my-plugin-1.0.0-all.jar)
    archiveClassifier.set('all')

    // 충돌 방지를 위한 패키지 재배치 (Relocation) - 선택 사항이지만 권장
    // 예: 내가 쓰는 Jedis 버전과 Kafka Connect가 내부적으로 쓰는 Jedis가 다를 경우를 대비
    relocate 'redis.clients', 'com.example.smt.shadow.redis.clients'
    relocate 'software.amazon.awssdk', 'com.example.smt.shadow.awssdk'
}